Simplifie resolveDamage : calcule la variance en interne au lieu de la recevoir en paramètre
Les 3 sites d'appel passaient systématiquement DiceRoller.randomVariance(0.9, 1.1), rendant le paramètre redondant.